<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcularEdadActivity">

    <TextView
        android:id="@+id/textCalcularEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_calcular_edad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <EditText
        android:id="@+id/text_fecha_nacimiento"
        android:layout_width="262dp"
        android:layout_height="42dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date_fecha_nacimiendo"
        android:inputType="date"
        android:maxLines="1"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/text_fecha_actual"
        android:layout_width="262dp"
        android:layout_height="42dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date_fecha_actual"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_calcular_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular_edad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>